--- a/css/style.css
+++ b/css/style.css
@@ -1,32 +1,27 @@
 body {
-    background-color: #3E54AC;
+    background-color: rgb(231, 231, 231);
+}
+.header {
+    background-color: #205E61;
+    border-bottom: 7px skyblue solid;
+    width: 100%;
+    height: 400px;
+    color: white;
+    text-align: center;
+}
+.title {
+    padding-top: 100px;
 }
 #container {
-    width: 50%;
-    height: 1800px;
-    margin: 30px auto 30px auto;
-    padding: 50px;
+    width: 1000px;
+    height: 1000px;
+    margin: 80px auto 0 auto;
 }
-.name {
-    text-align: center;
-    background-color: #655DBB;
-    padding: 50px;
-    border-radius: 10px;
-}
-input {
-    width: 500px;
-    height: 50px;
-    border: 4px #ECF2FF solid;
-    border-radius: 5px;
-}
-h1 {
-    color: #ECF2FF;
-}
-.home-work {
-    background-color: #BFACE2;
-    height: 500px;
-    padding: 50px;
-    margin-top: 30px;
-    border-radius: 10px;
-    text-align: center;
+.boxe1 {
+    width: 30%;
+    height: 400px;
+    background-color: rgb(238, 238, 238);
+    float: left;
+    border-left: 3px skyblue solid;
+    border-bottom: 3px skyblue solid;
 }
