--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+
 body {
     background-color: rgb(231, 231, 231);
 }
@@ -7,15 +8,17 @@ body {
     width: 100%;
     height: 400px;
     color: white;
-    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
-.title {
-    padding-top: 100px;
-}
+
 #container {
     width: 1000px;
     height: 1000px;
     margin: 80px auto 0 auto;
+    display: flex;
+    justify-content: space-around;
 }
 .boxe1 {
     width: 30%;
