--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@ body {
     height: 1000px;
     margin: 80px auto 0 auto;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
 }
 .boxe1 {
     width: 30%;
