--- a/css/style.css
+++ b/css/style.css
@@ -1,19 +1,23 @@
-
+/*
+    colors: #035c5f skyblue ( content and divs )
+            #8b2b02 orange ( boders )
+            #ED8D8D red ( highlighting )
+    */
 body {
-    background-color: rgb(231, 231, 231);
+    background-color: rgb(228, 228, 228);
 }
 .header {
-    background-color: #205E61;
-    border-bottom: 7px skyblue solid;
+    border-bottom: 7px #8b2b02 solid;
     width: 100%;
-    height: 400px;
+    height: 550px;
     color: white;
     display: flex;
     align-items: center;
     justify-content: center;
+    font-family: 'Gloock', serif;
 }
 
-#container {
+.container {
     width: 1000px;
     height: 1000px;
     margin: 80px auto 0 auto;
@@ -24,7 +28,32 @@ body {
     width: 30%;
     height: 400px;
     background-color: rgb(238, 238, 238);
-    float: left;
-    border-left: 3px skyblue solid;
-    border-bottom: 3px skyblue solid;
+    border-left: 3px #8b2b02 solid;
+    border-bottom: 3px #8b2b02 solid;
+    border-radius: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    gap: 10px;
+}
+.ramadan {
+    width: 100%;
+    height: auto;
+    border-radius: 20px 20px 0 0;
+    border-bottom: 2px #8b2b02 solid;
+}
+.box_headline {
+    font-size: 30px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    text-align: center;
+    color: #f5d665;
+    font-family: 'Gloock', serif;
+}
+.box_paragraph {
+    margin: 0 15px 40px 15px;
+    font-size: 18px;
+    font-weight: bold;
+    color: #8b2b02;
+    font-family: 'Dosis', sans-serif;
 }
